获取某个用户的工单情况

--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
 {
 "USER":"root",
 "PASSWORD":"111111",
-"HOST":"192.168.0.103",
-"PORT":"3306"
+"HOST":"192.168.8.13",
+"PORT":"3306",
+"USER_DEVOPS":"developer",
+"PASSWORD_DEVOPS":"develop@tbkt",
+"HOST_DEVOPS":"192.168.7.250",
+"PORT_DEVOPS":"3308"
 }
